fix background color dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ html:has(#switchTheme:checked) {
     .modal-content,
     .modal,
     #file-upload {
-        background-color: #212529 !important;
+        background-color: #1E1E2E !important;
         color: white !important;
     }
 
